--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Ferdi Şahin</title>
+        <title>Ferdi Şahin - Web Tasarımcı & Front-end Geliştirici</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta content="" name="description"/>
-        <meta content="" name="author"/>
+        <meta content="Freelance Web Tasarımcı - PSD to HTML & Sketch to HTML" name="description"/>
+        <meta content="Ferdi Şahin" name="author"/>
 
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
